# workout-app

./: Cargo.toml  Dockerfile  README.md  example_data.sql  service-account.yaml  workout-app-deployment.yml  workout-app-gke-deployment.yml
backend/: Cargo.toml  Dockerfile  README.md  example_data.sql  service-account.yml  setup_testing_db.sh  workout-app-gke-deployment.yml
backend/migrations/2020-05-29-142659_exercises/: up.sql
backend/migrations/2020-05-31-101243_workouts/: down.sql  up.sql
backend/migrations/2020-05-31-132344_associate_exercises/: down.sql  up.sql
backend/src/: db.rs  main.rs  models.rs  tests.rs
frontend/: Cargo.toml  README.md
frontend/src/: lib.rs
migrations/2020-05-29-142659_exercises/: down.sql
migrations/2020-07-12-173453_reps_range/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schema.rs  tests.rs  workout.rs
