[package]
name = "workout-app"
version = "0.1.0"
authors = ["Eduardo Riol <eduriol@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.4"
rocket_contrib = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
